--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,56 @@ command = "hugo -F -b $DEPLOY_PRIME_URL"
 [context.production]
 [context.production.environment]
 HUGO_ENV = "production"
+
+baseurl = "/"
+disqusShortname = ""
+footnotereturnlinkcontents = "↩"
+googleAnalytics = ""
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
+languageCode = "en-us"
+preserveTaxonomyNames = true
+theme = "hugo-ivy"
+title = "Wenqi_Diao"
+
+[markup]
+[markup.goldmark]
+[markup.goldmark.renderer]
+unsafe = true
+
+[menu]
+
+[[menu.main]]
+name = "Home"
+url = "/"
+weight = 1
+
+[[menu.main]]
+name = "About"
+url = "/about/"
+weight = 2
+
+[[menu.main]]
+name = "Categories"
+url = "/categories/"
+weight = 3
+
+[[menu.main]]
+name = "Tags"
+url = "/tags/"
+weight = 4
+
+[[menu.main]]
+name = "Subscribe"
+url = "/index.xml"
+
+[params]
+description = "Personal website of Wenqi Diao."
+footer = "&copy; [Wenqi Diao] 2020-2021 | [Github](https://github.com/wdiao-zju) | [Twitter](https://twitter.com/DiaoWenqi)"
+highlightjsCDN = "//cdn.bootcss.com"
+highlightjsLang = ["r", "yaml", "tex"]
+highlightjsTheme = "github"
+highlightjsVersion = "9.12.0"
+
+[permalinks]
+note = "/note/:year/:month/:day/:slug/"
+post = "/post/:year/:month/:day/:slug/"
